fix: Corrige visibilidad de los ícono de acciones

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,6 +111,9 @@ input[type='checkbox'] {
     color: var(--white);
 }
 
+.listaQuehaceres li.pendiente .quehacer .acciones .editar {
+    visibility: visible;
+}
 .listaQuehaceres li.completado .quehacer .acciones .editar {
     visibility: hidden;
 }
